<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="iiitb.app.geoclientapp.GeofenceClientModeActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
     <item
        android:id="@+id/user_mode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/User_mode"/>
     
     
      <item
        android:id="@+id/adminmode_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>
      
      
       <item
        android:id="@+id/adminmode_newVehicle"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/adminmode_newVehicle"/>
       
       
        <item
        android:id="@+id/adminmode_newPath"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/adminmode_newPath"/>

</menu>
